--- a/gcc/build
+++ b/gcc/build
@@ -1,5 +1,6 @@
 #!/bin/sh -uxe
 # Use lib not lib64 by default
+
 sed -i '/m64=/s/lib64/lib/' gcc/gcc/config/i386/t-linux64
 sed -i 's/lib64/lib/' gcc/gcc/config/i386/linux64.h
 
@@ -16,37 +17,47 @@ unset LDFLAGS
 mkdir -p build
 cd build
 
+export libat_cv_have_ifunc=yes
 ../gcc/configure \
-    --build=$(CARCH) \
-    --enable-bootstrap \
     --prefix=/usr \
     --libexecdir=/usr/libexec \
     --mandir=/usr/share/man \
     --infodir=/usr/share/info \
     --with-bugurl=https://github.com/mdartmann/mkiss/issues \
-    --with-pkgversion=mkiss	\
-    --enable-languages=c,c++,go,lto,objc,obj-c++,d  \
-    --with-isl \
-    --with-linker-hash-style=gnu \
-    --with-system-zlib \
-    --enable-__cxa_atexit \
-    --enable-cet=auto  \
-    --enable-checking=release \
-    --enable-clocale=gnu \
-    --enable-default-pie \
-    --enable-default-ssp \
-    --enable-gnu-indirect-function \
+    --disable-multilib \
+    --enable-symvers \
+    --disable-libmpx \
+    --disable-libmudflap \
+    --enable-libsanitizer \
+    --disable-werror \
+    --enable-nls \
     --enable-install-libiberty \
-    --enable-linker-build-id \
-    --enable-lto \
-    --disable-multlib \
-    --enable-plugin \
+    --enable-__cxa_atexit \
+    --enable-default-pie \
+    --enable-default-pic \
+    --enable-default-ssp \
     --enable-shared \
+    --enable-threads \
+    --enable-graphite \
+    --enable-plugin \
+    --enable-lto \
+    --enable-tls \
+    --with-isl \
+    --enable-languages=c,c++,lto,objc,obj-c++ \
+    --without-included-gettext \
+    --with-system-zlib \
+    --with-gmp=/usr \
+    --with-mpc=/usr \
+    --with-mpfr=/usr \
     --enable-threads=posix \
-    --disable-libssp \
-    --disable-libstdcxx-pch \
-    --disable-libunwind-exceptions \
-    --disable-werror
+    --enable-checking=release \
+    --with-linker-hash-style=gnu \
+    --enable-gnu-indirect-function \
+    --enable-linker-build-id \
+    --enable-gnu-unique-object \
+    --enable-clocale=gnu \
+    --enable-cet=auto \
+    --enable-bootstrap
 
 make
 make DESTDIR="$1" install
@@ -58,4 +69,3 @@ ln -sfv ../../libexec/gcc/$(cc -dumpmachine)/$2/liblto_plugin.so \
 
 ln -s gcc "$1/usr/bin/cc"
 install -Dm755 ../c99 "$1/usr/bin/c99"
-
