Add shadow and its dependencies
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	new file:   audit/build
	new file:   audit/checksums
	new file:   audit/sources
	new file:   audit/version
	new file:   krb5/build
	new file:   krb5/checksums
	new file:   krb5/patches/krb5-config_LDFLAGS.patch
	new file:   krb5/sources
	new file:   krb5/version
	modified:   linux-pam/build
	new file:   linux-pam/post-install
	new file:   openldap/build
	new file:   openldap/checksums
	new file:   openldap/sources
	new file:   openldap/version
	new file:   shadow/build
	new file:   shadow/checksums
	new file:   shadow/files/chgpasswd
	new file:   shadow/files/chpasswd
	new file:   shadow/files/defaults.pam
	new file:   shadow/files/login.defs
	new file:   shadow/files/newusers
	new file:   shadow/files/passwd
	new file:   shadow/patches/fix-libpam.patch
	new file:   shadow/sources
	new file:   shadow/version

--- a/linux-pam/build
+++ b/linux-pam/build
@@ -1,14 +1,13 @@
 #!/bin/sh -uxe
 
 ./configure \
-	--prefix=/usr \
 	--libdir=/usr/lib \
 	--sbindir=/usr/bin \
-	--enable-unix \
 	--enable-shared \
-	--enable-largefile \
+	--enable-unix \
 	--enable-pamlocking \
 	--enable-usergroups \
+	--enable-largefile \
 	--enable-nls \
 	--disable-db
 
@@ -25,5 +24,6 @@ install -Dm644 base-account.pamd                "$1/etc/pam.d/base-account"
 install -Dm644 base-session.pamd                "$1/etc/pam.d/base-session"
 install -Dm644 base-password.pamd               "$1/etc/pam.d/base-password"
 install -Dm644 system-login.pamd                "$1/etc/pam.d/system-login"
+install -Dm644 system-login.pamd		"$1/etc/pam.d/system-auth"
 install -Dm644 system-local-login.pamd          "$1/etc/pam.d/system-local-login"
 install -Dm644 base-session-noninteractive.pamd "$1/etc/pam.d/base-session-noninteractive"
