Add help2man build
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   help2man/build
	new file:   help2man/checksums
	modified:   help2man/sources

--- a/help2man/build
+++ b/help2man/build
@@ -1,1 +1,11 @@
-#!/bin/sh -e
+#!/bin/sh -uxe
+
+
+./configure \
+	--prefix=/usr \
+	--mandir=/usr/share/man \
+	--infodir=/usr/share/info \
+	--libdir=/usr/lib
+
+make 
+make DESTDIR="$1" install
