Make sudo use ldap
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   sudo/build

--- a/sudo/build
+++ b/sudo/build
@@ -10,7 +10,7 @@
 	--enable-tmpfiles.d \
 	--with-pam \
 	--with-sssd \
-	--without-ldap \
+	--with-ldap \
 	--with-env-editor \
 	--with-all-insults
 
