Fix auth toolchain
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   linux-pam/build
	modified:   linux-pam/checksums
	new file:   linux-pam/etcsums
	renamed:    shadow/files/defaults.pam -> linux-pam/files/chage.pamd
	renamed:    shadow/files/chgpasswd -> linux-pam/files/chfn.pamd
	new file:   linux-pam/files/chgpasswd.pamd
	renamed:    shadow/files/chpasswd -> linux-pam/files/chpasswd.pamd
	new file:   linux-pam/files/chsh.pamd
	new file:   linux-pam/files/groupadd.pamd
	new file:   linux-pam/files/groupdel.pamd
	new file:   linux-pam/files/groupmems.pamd
	new file:   linux-pam/files/groupmod.pamd
	new file:   linux-pam/files/login.pamd
	renamed:    shadow/files/newusers -> linux-pam/files/newusers.pamd
	modified:   linux-pam/files/other.pamd
	new file:   linux-pam/files/partimaged.pamd
	new file:   linux-pam/files/passwd.pamd
	new file:   linux-pam/files/rlogin.pamd
	new file:   linux-pam/files/rsh.pamd
	new file:   linux-pam/files/runuser-l.pamd
	new file:   linux-pam/files/runuser.pamd
	new file:   linux-pam/files/screen.pamd
	new file:   linux-pam/files/shadow.pamd
	new file:   linux-pam/files/sshd.pamd
	new file:   linux-pam/files/su-l.pamd
	modified:   linux-pam/files/su.pamd
	new file:   linux-pam/files/sudo.pamd
	new file:   linux-pam/files/system-auth.pamd
	modified:   linux-pam/files/system-login.pamd
	new file:   linux-pam/files/system-remote-login.pamd
	new file:   linux-pam/files/system-services.pamd
	new file:   linux-pam/files/useradd.pamd
	new file:   linux-pam/files/userdel.pamd
	new file:   linux-pam/files/usermod.pamd
	new file:   linux-pam/files/vlock.pamd
	modified:   linux-pam/post-install
	modified:   linux-pam/sources
	modified:   shadow/build
	modified:   shadow/checksums
	new file:   shadow/depends
	new file:   shadow/etcsums
	new file:   shadow/files/chage.pam
	modified:   shadow/files/login.defs
	deleted:    shadow/files/passwd
	new file:   shadow/files/passwd.pam
	new file:   shadow/files/shado

--- a/shadow/build
+++ b/shadow/build
@@ -9,12 +9,23 @@ autoreconf -fsiv
     --sbindir=/usr/bin \
     --libdir=/usr/lib \
     --mandir=/usr/share/man \
+    --localstatedir=/var/run \
     --sysconfdir=/etc \
+    --enable-utmpx \
+    --enable-man \
+    --enable-largefile \
+    --enable-nls \
     --disable-account-tools-setuid \
     --with-group-name-max-length=32 \
+    --with-sha-crypt \
+    --with-btrfs \
+    --with-bcrypt \
     --with-libpam \
-    --without-selinux \
-    --with-audit
+    --without-fcaps \
+    --with-audit \
+    --with-nscd \
+    --with-gnu-ld \
+    --without-selinux 
 
 make
 make DESTDIR="$1" install
@@ -23,14 +34,7 @@ make DESTDIR="$1" install
 mv -f "$1/usr/sbin/"* "$1/usr/bin"
 rmdir "$1/usr/sbin"
 
-install -Dm644 login.defs "$1/etc/login.defs"
-install -t "$1/etc/pam.d" -m644 ./{passwd,chgpasswd,chpasswd,newusers}
-install -Dm644 etc/pam.d/groupmems "$1/etc/pam.d/groupmems"
-
-for file in chage groupadd groupdel groupmod shadow useradd usermod userdel; do
-	install -Dm644 defaults.pam "$1/etc/pam.d/$file"
-done
-
+#rm -r "$1"/etc/pam.d
 # Remove evil/broken tools
 rm "$1"/usr/bin/logoutd
 
@@ -43,6 +47,5 @@ rm "$1"/usr/bin/sg
 rm "$1"/usr/bin/nologin
 rm "$1"/usr/bin/vipw
 rm "$1"/usr/bin/vigr
-
 # but we keep newgrp, as sg is really an alias to it
-mv "$1"/usr/bin/{newgrp,sg}
+#mv "$1"/usr/bin/{newgrp,sg}
