--- a/openssl/build
+++ b/openssl/build
@@ -1,13 +1,13 @@
 #!/bin/sh -uxe
 
-./Config \
+./Configure \
 	--prefix=/usr \
 	--openssldir=/etc/ssl \
 	--libdir=lib \
 	shared \
 	no-ssl3-method \
 	enable-ec_nistp_64_gcc_128 \
-	"-Wa,--noexecstack ${CPPFLAGS} ${CFLAGS} ${LDFLAGS}" \
+	"-Wa,--noexecstack ${CFLAGS} ${LDFLAGS}" \
 	linux-x86_64
 
 make
