Add doxygen, ghostscript and groff, a few doc tools I missed
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   core/dbus/build
	new file:   core/doxygen/build
	new file:   core/doxygen/checksums
	new file:   core/doxygen/sources
	new file:   core/doxygen/version
	new file:   core/ghostscript/build
	new file:   core/ghostscript/checksums
	new file:   core/ghostscript/sources
	new file:   core/ghostscript/version
	new file:   core/groff/build
	new file:   core/groff/checksums
	new file:   core/groff/sources
	new file:   core/groff/version

--- a/core/dbus/build
+++ b/core/dbus/build
@@ -8,7 +8,7 @@
 	--with-system-pid-file=/var/run/dbus/pid \
 	--with-console-auth-dir=/var/run/console \
 	--enable-assert \
-	--disable-doxygen-docs \
+	--enable-doxygen-docs \
 	--enable-inotify \
 	--enable-user-session \
 	--without-x
