Add better sudo prompt
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   core/sudo/build

--- a/core/sudo/build
+++ b/core/sudo/build
@@ -12,6 +12,7 @@
 	--with-sssd \
 	--with-ldap \
 	--with-env-editor \
+    --with-passprompt="[sudo] password for %p: " \
 	--with-all-insults
 
 make
