Fix nodejs malformed archive error
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   core/binutils/build
	modified:   core/binutils/checksums
	new file:   core/binutils/patches/0001-close-thin-archive-fd.patch
	modified:   core/binutils/sources

--- a/core/binutils/build
+++ b/core/binutils/build
@@ -3,6 +3,9 @@
 # Disable development mode
 sed -i '/^development=/s/true/false/' bfd/development.sh
 
+# Fix malformed archive error with nodejs
+patch -Np1 -i 0001-close-thin-archive-fd.patch
+
 ./configure \
 	--prefix=/usr \
 	--with-lib-path=/usr/lib:/usr/local/lib \
