Add introspection to gtk3, pango and harfbuzz
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gui/gtk3/build
	modified:   gui/harfbuzz/build
	modified:   gui/pango/build

--- a/gui/harfbuzz/build
+++ b/gui/harfbuzz/build
@@ -1,13 +1,15 @@
 #!/bin/sh -uxe
 
 ./configure \
+    --enable-introspection \
     --enable-static \
     --with-libstdc=yes \
     --prefix=/usr \
     --with-icu=yes \
+    --with-gobject=yes\
     --with-glib=yes \
     --with-graphite2=yes \
-    --with-cairo=yes
+    --with-cairo=yes 
 
 make
 make DESTDIR="$1" install
