--- a/core/gtk-doc/build
+++ b/core/gtk-doc/build
@@ -1,10 +1,8 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
-export CFLAGS+=" -DG_DISABLE_CAST_CHECKS"
 
 meson build \
-	$MESON_OPTIONS \
-	-D selinux=disabled 
+    ${MESON_OPTIONS} 
 
 ninja -C build
 ninja -C build install
