--- a/core/gobject-introspection/build
+++ b/core/gobject-introspection/build
@@ -3,7 +3,7 @@ export DESTDIR="$1"
 
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
-    -D gtk_doc=false \
+    -D gtk_doc=true \
     -D doctool=disabled
 
 ninja -C build
