Add adwaita-icon-theme + dependencies
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   extra/librsvg/build
	new file:   extra/librsvg/post-install
	modified:   extra/librsvg/version
	new file:   extra/perl-xml-simple/build
	new file:   extra/perl-xml-simple/checksums
	new file:   extra/perl-xml-simple/sources
	new file:   extra/perl-xml-simple/version
	new file:   gui/adwaita-icon-theme/build
	new file:   gui/adwaita-icon-theme/sources
	new file:   gui/adwaita-icon-theme/version
	modified:   gui/gdk-pixbuf2/build
	new file:   gui/gsettings-desktop-schemas/build
	new file:   gui/gsettings-desktop-schemas/sources
	new file:   gui/gsettings-desktop-schemas/version
	modified:   gui/gtk3/build
	modified:   gui/gtk3/version
	new file:   gui/hicolor/build
	new file:   gui/hicolor/checksums
	new file:   gui/hicolor/sources
	new file:   gui/hicolor/version
	new file:   gui/icon-naming-utils/build
	new file:   gui/icon-naming-utils/checksums
	new file:   gui/icon-naming-utils/sources
	new file:   gui/icon-naming-utils/version

--- a/extra/librsvg/build
+++ b/extra/librsvg/build
@@ -1,10 +1,15 @@
 #!/bin/sh -uxe
-zsh
-autoreconf -fiv
+
+NOCONFIGURE=1 ./autogen.sh
 
 ./configure \
     --prefix=/usr \
-    --disable-static 
+    --disable-static \
+    --disable-vala \
+    --enable-gtk-doc
+
+export CARGO_PROFILE_RELEASE_LTO=true CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1
+
 sed -s "s| -shared | ${LDFLAGS}\0|g" libtool
 
 make
