--- a/gui/gtk3/build
+++ b/gui/gtk3/build
@@ -3,12 +3,8 @@ export DESTDIR="$1"
 export CFLAGS+=" -DG_DISABLE_CAST_CHECKS"
 
 meson build \
-    ${MESON_OPTIONS} \
-    -D broadway_backend=true \
-    -D cloudproviders=false \
-    -D tracker3=false \
-    -D colord=no \
-    -D man=false
+    ${MESON_OPTIONS}
+
 
 ninja -C build
 ninja -C build install
