--- a/core/llvm/build
+++ b/core/llvm/build
@@ -27,7 +27,7 @@ cmake -B build -G Ninja \
     -D LLVM_ENABLE_LIBEDIT=ON \
     -D LLVM_HOST_TRIPLE="${CHOST}" \
     -D LLVM_BUILD_EXAMPLES=OFF \
-    -D LLVM_BUILD_DOCS=OFF \
+    -D LLVM_BUILD_DOCS=ON \
     -D LLVM_BUILD_TESTS=OFF \
     -D LLVM_ENABLE_LIBCXX=OFF \
     -D LLVM_ENABLE_LLD=OFF \
