mesa: llvm 13 rebuild
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gui/mesa/build
	modified:   gui/mesa/checksums
	new file:   gui/mesa/patches/swr-llvm13-patch1.patch
	new file:   gui/mesa/patches/swr-llvm13-patch2.patch
	modified:   gui/mesa/sources
	modified:   gui/mesa/version

--- a/gui/mesa/build
+++ b/gui/mesa/build
@@ -1,6 +1,10 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+for i in *.patch; do
+    patch -p1 -i $i
+done
+
 meson build \
     -D b_ndebug=true \
     -D platforms=x11,wayland \
