--- a/core/rust/build
+++ b/core/rust/build
@@ -56,7 +56,7 @@ jemalloc = true
 codegen-units-std = 1
 
 [dist]
-compression-formats = ["zst"]
+compression-formats = ["gz"]
 
 [target.x86_64-unknown-linux-gnu]
 llvm-config = "/usr/bin/llvm-config"
