--- a/gnome/dconf/build
+++ b/gnome/dconf/build
@@ -3,8 +3,7 @@ export DESTDIR="$1"
 
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
-    -D gtk_doc=true  \
-    -D bash_completion=false
+    -D gtk_doc=true 
 
 ninja -C build
 ninja -C build install
