Add bluez + bluetooth audio stack
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	new file:   bluez/build
	new file:   bluez/checksums
	new file:   bluez/files/bluetooth.modprobe
	new file:   bluez/post-install
	new file:   bluez/sources
	new file:   bluez/version
	new file:   libical/build
	new file:   libical/checksums
	new file:   libical/sources
	new file:   libical/version
	modified:   pipewire/build
	modified:   pipewire/version
	new file:   sbc/build
	new file:   sbc/sources
	new file:   sbc/version

--- a/extra/pipewire/build
+++ b/extra/pipewire/build
@@ -11,9 +11,9 @@ meson build \
     -D session-managers='media-session' \
     -D systemd=disabled \
     -D avahi=disabled \
-    -D bluez5=disabled \
+    -D bluez5=enabled \
     -D docs=disabled \
-    -D man=disabled \
+    -D man=enabled \
     -D alsa=enabled \
     -D pipewire-alsa=enabled || zsh
 ninja -C build
