--- a/core/pigz/build
+++ b/core/pigz/build
@@ -5,6 +5,7 @@ install -Dm755 pigz "$1/usr/bin/pigz"
 
 ln -sf pigz "$1/usr/bin/gzip"
 ln -sf pigz "$1/usr/bin/unpigz"
+ln -sf pigz "$1/usr/bin/gunzip"
 
 install -Dm644 pigz.1 "$1"/usr/share/man/man1/pigz.1
 ln -sf pigz.1 "$1/usr/share/man/man1/gzip.1"
