gnutls: add pkcs11 support
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   extra/gnutls/build
	modified:   extra/gnutls/depends
	modified:   extra/gnutls/version

--- a/extra/gnutls/build
+++ b/extra/gnutls/build
@@ -8,7 +8,7 @@
     --with-guile-site-dir=no \
     --with-included-libtasn1 \
     --with-included-unistring \
-    --without-p11-kit
+    --with-p11-kit
 
 sed -i "s| -shared | ${LDFLAGS}\0|g" libtool
 
