--- a/gnome/libgexiv2/build
+++ b/gnome/libgexiv2/build
@@ -3,7 +3,7 @@ export DESTDIR="$1"
 
 meson build \
     ${MESON_OPTIONS} \
-    -D docs=false
+    -D gtk_doc=true
 
 ninja -C build
 ninja -C build install
