--- a/core/libinput/build
+++ b/core/libinput/build
@@ -5,9 +5,7 @@ meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D udev-dir=/usr/lib/udev \
     -D tests=false \
-    -D documentation=false \
-    -D libwacom=false \
-    -D debug-gui=false
+    -D documentation=false
 
 ninja -C build
 ninja -C build install
