--- a/gui/alacritty/build
+++ b/gui/alacritty/build
@@ -9,6 +9,10 @@ install -Dm755 target/release/alacritty "$1/usr/bin/alacritty"
 
 install -Dm644 extra/alacritty.man "$1/usr/share/man/man1/alacritty.1"
 install -Dm644 alacritty.yml "$1/usr/share/doc/alacritty/example/alacritty.yml"
-
+install -Dm644 extra/linux/io.alacritty.Alacritty.appdata.xml \
+    "$1"/usr/share/appdata/io.alacritty.Alacritty.appdata.xml
+install -Dm644 extra/completions/alacritty.bash "$1"/usr/share/bash-completion/completions/alacritty
+install -Dm644 extra/completions/_alacritty "$1"/usr/share/zsh/site-functions/_alacritty
+install -Dm644 extra/logo/alacritty-term.svg "$1"/usr/share/pixmaps/Alacritty.svg
 install -Dm644 extra/linux/Alacritty.desktop "$1"/usr/share/applications/Alacritty.desktop
 
