--- a/extra/nss/build
+++ b/extra/nss/build
@@ -42,5 +42,6 @@ sed nss/pkg/pkg-config/nss.pc.in \
     -e "s,%prefix%,/usr,g" \
     -e "s,%exec_prefix%,/usr/bin,g" \
     -e "s,%includedir%,/usr/include/nss,g" \
-    -e "s,%NSS_VERSION%,3.71,g" |
+    -e "s,%NSS_VERSION%,${2},g" |
 install -Dm644 /dev/stdin "$1/usr/lib/pkgconfig/nss.pc"
+
