--- a/gnome/gnome-session/build
+++ b/gnome/gnome-session/build
@@ -2,11 +2,7 @@
 export DESTDIR="$1"
 
 meson build \
-    ${MESON_OPTIONS/-D b_lto=true/} \
-    --buildtype plain \
-    -D systemd=true \
-    -D systemd_session=enable \
-    -D systemd_journal=true
+    ${MESON_OPTIONS/-D b_lto=true/} 
 
 ninja -C build
 ninja -C build install
