mutter: enable profiling
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	new file:   extra/sysprof/build
	new file:   extra/sysprof/sources
	new file:   extra/sysprof/version
	modified:   gnome/mutter/build
	modified:   gnome/mutter/version
	new file:   gui/xorg-xauth/build
	new file:   gui/xorg-xauth/checksums
	new file:   gui/xorg-xauth/sources
	new file:   gui/xorg-xauth/version
	new file:   gui/xvfb-run/build
	new file:   gui/xvfb-run/checksums
	new file:   gui/xvfb-run/files/xvfb-run
	new file:   gui/xvfb-run/files/xvfb-run.1
	new file:   gui/xvfb-run/sources
	new file:   gui/xvfb-run/version

--- a/gnome/mutter/build
+++ b/gnome/mutter/build
@@ -5,13 +5,10 @@ export CFLAGS+=" -fno-semantic-interposition"
 export LDFLAGS+=" -Wl,-Bsymbolic-functions"
 
 meson build \
-    ${MESON_OPTIONS} \
+    ${MESON_OPTIONS/-D b_lto=true/} \
     -D egl_device=true \
     -D wayland_eglstream=false \
-    -D installed_tests=false \
-    -D profiler=false \
-    -D systemd=true \
-    -D tests=false
+    -D tests=false 
 
-ninja -C build
+ninja -C build 
 ninja -C build install
