Add automount and better gnome integration to nautilus
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	new file:   extra/fuse3/build
	new file:   extra/fuse3/checksums
	new file:   extra/fuse3/post-install
	new file:   extra/fuse3/sources
	new file:   extra/fuse3/version
	new file:   extra/libgphoto2/build
	new file:   extra/libgphoto2/sources
	new file:   extra/libgphoto2/version
	new file:   gnome/gvfs/build
	new file:   gnome/gvfs/sources
	new file:   gnome/gvfs/version
	modified:   gnome/nautilus/version
	modified:   gnome/udisks2/build
	modified:   gnome/udisks2/version

--- a/gnome/udisks2/build
+++ b/gnome/udisks2/build
@@ -8,20 +8,11 @@ NOCONFIGURE=1 ./autogen.sh
     --sysconfdir=/etc \
     --sbindir=/usr/bin \
     --libexecdir=/usr/lib \
+    --with-systemdsystemunitdir=/usr/lib/systemd/system \
     --localstatedir=/var \
     --disable-static \
     --enable-gtk-doc \
-    --enable-acl \
-    --enable-bcache \
-    --enable-btrfs \
-    --enable-daemon \
-    --disable-debug \
-    --enable-introspection \
-    --enable-lvm2 \
-    --enable-lvmcache \
-    --enable-man \
-    --enable-nls \
-    --enable-vdo
+    enable_available_modules=yes
 
 make
 make DESTDIR="$1" install
