Add pinentry-gnome3 if gnome-keyring is present
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   core/pinentry/build

--- a/core/pinentry/build
+++ b/core/pinentry/build
@@ -1,9 +1,15 @@
 #!/bin/sh -uxe
 
+configParams=(
+--prefix=/usr
+--enable-pinentry-curses
+--enable-fallback-curses
+--enable-libsecret
+)
+
+kiss l gnome-keyring >/dev/null 2>&1 && configParams+=(--enable-pinentry-gnome3)
+
 ./configure \
-	--prefix=/usr \
-	--enable-pinentry-curses \
-	--enable-fallback-curses \
-	--enable-libsecret
+    ${configParams[@]}
 make
 make DESTDIR="$1" install
