--- a/core/efivar/build
+++ b/core/efivar/build
@@ -1,10 +1,9 @@
 #!/bin/sh -uxe
 
-sed -e 's|-Werror||g' -i gcc.specs
+# fix issues with linker scripts
+patch -Np1 -i *.patch
 
-sed 's|-rpath,$(TOPDIR)/src|-rpath,$(libdir)|g' -i src/test/Makefile
-
-make libdir=/usr/bin bindir=/usr/bin mandir=/usr/share/man includedir=/usr/include 
+make ERRORS='' all
 
 make DESTDIR="$1" libdir=/usr/lib bindir=/usr/bin mandir=/usr/share/man includedir=/usr/include \
        install	-j1 V=1
