--- a/core/libxcrypt/build
+++ b/core/libxcrypt/build
@@ -5,6 +5,8 @@
 	--disable-static \
 	--enable-hashes=strong,glibc \
 	--enable-obsolete-api=no \
-	--disable-failure-tokens
+	--disable-failure-tokens \
+    --disable-werror
+
 make
 make DESTDIR="$1" install
