--- a/gnome/nautilus/build
+++ b/gnome/nautilus/build
@@ -2,6 +2,8 @@
 export DESTDIR="$1"
 
 git fetch
+
+# libportal 0.5
 git cherry-pick -n ae752ea07895b918683f664fe78950255f7faab0
 git submodule update --init --recursive
 
