--- a/extra/nss/build
+++ b/extra/nss/build
@@ -23,7 +23,7 @@ make  -C nspr DESTDIR="$1" install
 
 
 sed nspr/Linux*/config/nspr.pc \
-    -e "s,/usr/local,/usr,g" |
+    -e "s|/usr/local|/usr|g" |
 install -Dm644 /dev/stdin "$1/usr/lib/pkgconfig/nspr.pc"
 
 install -Dt "$1/usr/include/nss" -m644 dist/public/nss/*.h
@@ -36,12 +36,11 @@ install -Dt "$1/usr/bin"         -m755 dist/Linux*/bin/*
 install -Dt "$1/usr/include/nss/obsolete" \
     -m644 dist/Linux*/include/obsolete/*.h
 
-# This is disgusting and I hate this package with a passion.
 sed nss/pkg/pkg-config/nss.pc.in \
-    -e "s,%libdir%,/usr/lib,g" \
-    -e "s,%prefix%,/usr,g" \
-    -e "s,%exec_prefix%,/usr/bin,g" \
-    -e "s,%includedir%,/usr/include/nss,g" \
-    -e "s,%NSS_VERSION%,${2},g" |
+    -e "s|%libdir%|/usr/lib|g" \
+    -e "s|%prefix%|/usr|g" \
+    -e "s|%exec_prefix%|/usr/bin|g" \
+    -e "s|%includedir%|/usr/include/nss|g" \
+    -e "s|%NSS_VERSION%|${2}|g" |
 install -Dm644 /dev/stdin "$1/usr/lib/pkgconfig/nss.pc"
 
