--- a/core/openssl/build
+++ b/core/openssl/build
@@ -1,5 +1,7 @@
 #!/bin/sh -uxe
 
+patch -p0 -i ca-dir.patch
+
 ./Configure \
 	--prefix=/usr \
 	--openssldir=/etc/ssl \
@@ -12,4 +14,3 @@
 
 make
 make DESTDIR="$1" MANDIR=/usr/share/man MANSUFFIX=ssl install
-install -Dm755 update-certdata.sh "$1/etc/ssl"
