--- a/gui/firefox/build
+++ b/gui/firefox/build
@@ -37,7 +37,7 @@ export MACH_USE_SYSTEM_PYTHON=1
 export MOZBUILD_STATE_PATH="$PWD/mozbuild"
 
 ulimit -n 4096
-yes y | ./mach build
+yes y | ./mach build -j12
 ./mach buildsymbols
 DESTDIR="$1" ./mach install
 
