Fix asciidoc build when already installed
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   extra/asciidoc/build
	modified:   extra/asciidoc/version

--- a/extra/asciidoc/build
+++ b/extra/asciidoc/build
@@ -1,5 +1,8 @@
 #!/bin/sh -uxe
 
+# Remove existing installation if it exists
+kiss l asciidoc 2>&1 > /dev/null && kiss r asciidoc 
+
 autoconf
 
 sed -i '/pip install/s/\.$/--root $(DESTDIR) ./' Makefile.in
