--- a/core/nodejs/build
+++ b/core/nodejs/build
@@ -7,7 +7,8 @@
 	--shared-libuv \
 	--experimental-http-parser \
 	--shared-nghttp2 \
-	--shared-cares
+	--shared-cares \
+    --shared-brotli
 
 make
 make DESTDIR="$1"  install
