--- a/extra/flatpak/build
+++ b/extra/flatpak/build
@@ -17,7 +17,8 @@ NOCONFIGURE=1 ./autogen.sh
     --enable-gtk-doc \
     --with-system-bubblewrap \
     --with-system-dbus-proxy \
-    --with-dbus-config-dir=/usr/share/dbus-1/system.d
+    --with-dbus-config-dir=/usr/share/dbus-1/system.d \
+    --disable-documentation
 
 make
 make DESTDIR="$1" install
