Fix meson >= 0.60 with a bunch of gnome packages
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gnome/gjs/build
	modified:   gnome/gjs/checksums
	modified:   gnome/gjs/sources
	modified:   gnome/gnome-bluetooth/build
	new file:   gnome/gnome-bluetooth/checksums
	modified:   gnome/gnome-bluetooth/sources
	modified:   gnome/gnome-calendar/build
	new file:   gnome/gnome-calendar/checksums
	new file:   gnome/gnome-calendar/patches/meson.patch
	modified:   gnome/gnome-calendar/sources
	modified:   gnome/gnome-control-center/build
	modified:   gnome/gnome-control-center/checksums
	modified:   gnome/gnome-control-center/patches/no-wwan-or-smb.patch
	modified:   gnome/gnome-control-center/sources
	modified:   gnome/gnome-disk-utility/build
	modified:   gnome/gnome-disk-utility/checksums
	modified:   gnome/gnome-disk-utility/sources
	modified:   gnome/gnome-screenshot/build
	new file:   gnome/gnome-screenshot/checksums
	modified:   gnome/gnome-screenshot/sources
	new file:   gnome/gnome-session/checksums
	modified:   gnome/gnome-settings-daemon/build
	new file:   gnome/gnome-settings-daemon/checksums
	modified:   gnome/gnome-settings-daemon/sources
	modified:   gnome/gnome-shell/build
	new file:   gnome/gnome-shell/checksums
	modified:   gnome/gnome-shell/sources

--- a/gnome/gjs/build
+++ b/gnome/gjs/build
@@ -1,15 +1,10 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
-# Fix build with meson >= 0.60.2
-patch -p1 -i *.patch
-
-
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     --buildtype release \
-    -D installed_tests=false \
-    -D profiler=disabled
+    -D installed_tests=false 
 
 ninja -C build
 ninja -C build install
