--- a/gnome/gnome-settings-daemon/build
+++ b/gnome/gnome-settings-daemon/build
@@ -1,6 +1,9 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+# Fix build with meson >= 0.61
+patch -Np1 -i d88484002b5a0c8d2adccb2a5886a7da0a247d27.patch
+
 git submodule init
 git submodule update
 
