Add my patch to gnome-tweaks that fixes meson >= 0.60
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gnome/gnome-tweaks/build
	new file:   gnome/gnome-tweaks/checksums
	new file:   gnome/gnome-tweaks/patches/0001-meson-Fix-incorrect-positional-argument.patch
	modified:   gnome/gnome-tweaks/sources

--- a/gnome/gnome-tweaks/build
+++ b/gnome/gnome-tweaks/build
@@ -1,6 +1,9 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+# Fix build with meson >= 0.60
+patch -Np1 -i 0001-meson-Fix-incorrect-positional-argument.patch
+
 meson build \
     ${MESON_OPTIONS}
 
