gdk-pixbuf2: disable docs to fix build
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gui/gdk-pixbuf2/build
	modified:   gui/gdk-pixbuf2/version

--- a/gui/gdk-pixbuf2/build
+++ b/gui/gdk-pixbuf2/build
@@ -5,7 +5,7 @@ meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D builtin_loaders=all \
     -D installed_tests=false \
-    -D gtk_doc=true
+    -D gtk_doc=false
 
 ninja -C build
 ninja -C build install
