gobject-introspection: fix build with meson >= 0.61
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   core/gobject-introspection/build
	modified:   core/gobject-introspection/version

--- a/core/gobject-introspection/build
+++ b/core/gobject-introspection/build
@@ -1,6 +1,12 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+git fetch
+
+git cherry-pick -n \
+    827494d6415b696a \
+    effb1e09dee263cd
+
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D gtk_doc=true \
