gptfdisk: fix -Werror issue
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   extra/gptfdisk/build
	modified:   extra/gptfdisk/version

--- a/extra/gptfdisk/build
+++ b/extra/gptfdisk/build
@@ -1,5 +1,8 @@
 #!/bin/sh -uxe
 
+export CFLAGS="${CFLAGS/-Werror=format-security/}"
+export CXXFLAGS="${CXXFLAGS/-Werror=format-security/}"
+
 sed -i "/^#include /s:ncursesw/::" gptcurses.cc
 
 make
