gvfs: fix meson >= 0.61
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gnome/gvfs/build
	new file:   gnome/gvfs/checksums
	new file:   gnome/gvfs/patches/meson.patch
	modified:   gnome/gvfs/sources
	modified:   gnome/gvfs/version

--- a/gnome/gvfs/build
+++ b/gnome/gvfs/build
@@ -1,6 +1,9 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+# Fix build with meson >= 0.61
+patch -Np1 -i meson.patch 
+
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D afp=false \
