libappindicator: fix build
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gnome/libappindicator/build

--- a/gnome/libappindicator/build
+++ b/gnome/libappindicator/build
@@ -14,7 +14,7 @@ cd gtk2
     --localstatedir=/var \
     --with-gtk=2 \
     --enable-gtk-doc \
-    --without-python
+    --disable-introspection
 
 sed -i "s| -shared | ${LDFLAGS}\0|g" libtool
 
