--- a/gnome/accountsservice/build
+++ b/gnome/accountsservice/build
@@ -1,6 +1,9 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+git fetch
+git cherry-pick -n ac9b14f1
+
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D admin_group=wheel \
