--- a/gnome/gnome-session/build
+++ b/gnome/gnome-session/build
@@ -2,7 +2,10 @@
 export DESTDIR="$1"
 
 meson build \
-    ${MESON_OPTIONS/-D b_lto=true/} 
+    ${MESON_OPTIONS/-D b_lto=true/}  \
+    -D systemd=true \
+    -D systemd_journal=true \
+    -D session_selector=true
 
 ninja -C build
 ninja -C build install
