--- a/gnome/gvfs/build
+++ b/gnome/gvfs/build
@@ -2,7 +2,8 @@
 export DESTDIR="$1"
 
 # Fix build with meson >= 0.61
-patch -Np1 -i meson.patch 
+git fetch
+git cherry-pick -n 17a067b9
 
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
