--- a/gnome/libnma/build
+++ b/gnome/libnma/build
@@ -3,7 +3,8 @@ export DESTDIR="$1"
 
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
-    -D mobile_broadband_provider_info=false
+    -D mobile_broadband_provider_info=false \
+    -D libnma_gtk4=true
 
 ninja -C build
 ninja -C build install
