--- a/gnome/colord-gtk/build
+++ b/gnome/colord-gtk/build
@@ -2,7 +2,8 @@
 export DESTDIR="$1"
 
 meson build \
-    ${MESON_OPTIONS} 
+    ${MESON_OPTIONS} \
+    -D gtk4=true
 
 ninja -C build
 ninja -C build install
